<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddContactFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/contact_name"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etContactNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/etContactName"
        android:hint="@string/contact_nickname"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etContactPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etContactNickname"
        android:layout_marginTop="8dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:hint="@string/contact_phone_number">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtGenderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etContactPhone"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_gender"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_below="@id/txtGenderTitle">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:checked="false"
            android:text="@string/male"/>

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:checked="false"
            android:text="@string/female"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGender"
        android:layout_marginTop="16dp"
        android:text="@string/add_contact"
        android:textAllCaps="false"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:background="@color/colorContrast"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>