<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.TerrorismFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/background_1">

            <TextView
                android:id="@+id/txtTerrorRequestedHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/you_ve_requested_for"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTerrorEmergency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTerrorRequestedHelp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/terror_emergency"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgRequestedTerror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTerrorEmergency"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:padding="8dp"
                android:background="@drawable/rounded_corner"
                android:src="@drawable/icon_rifle"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:padding="6dp"
            android:text="@string/hold_on_for_help"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="4dp"
            android:padding="6dp"
            android:text="@string/detected_location"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/detected_loc_terror"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/txt_current_location"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:paddingStart="4dp"/>

        <Button
            android:id="@+id/btnCancelTerror"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#41AAAAAA"
            android:text="@string/btn_cancel_alert" />

        <Button
            android:id="@+id/btnOutOfEmergTerror"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="18dp"
            android:elevation="4dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btn_out_of_emergency"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>